--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -18,6 +18,8 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install pylint
+        pip install -r slaps_function/requirements.txt
+        pip install -r stats_function/requirements.txt
     - name: Analysing the code with pylint
       run: |
         pylint --fail-under=7 $(git ls-files '*.py')
