--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -22,4 +22,4 @@ jobs:
         pip install -r stats_function/requirements.txt
     - name: Analysing the code with pylint
       run: |
-        pylint --fail-under=7 $(git ls-files '*.py')
+        pylint $(git ls-files '*.py')
