--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,7 +15,7 @@ jobs:
       uses: 'google-github-actions/auth@v0.4.0'
       with:
         credentials_json: '${{ secrets.GOOGLE_CREDENTIALS }}'
-    - name: Deploy projects
+    - name: Deploy project
       run: |
         gcloud config set pass_credentials_to_gsutil true
         sh deploy.sh
