--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,6 +17,6 @@ jobs:
         credentials_json: '${{ secrets.GOOGLE_CREDENTIALS }}'
     - name: Deploy project
       run: |
-        gcloud authenticate
+        gcloud auth
         gcloud config set pass_credentials_to_gsutil true
         sh deploy.sh
