--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,7 +15,7 @@ jobs:
       uses: 'google-github-actions/auth@v0.4.0'
       with:
         credentials_json: '${{ secrets.GOOGLE_CREDENTIALS }}'
-    - name: Deploy project
+    - name: Deploy projects
       env:
         AWS_ACCESS_KEY_ID: '${{ secrets.AWS_KEY }}'
         AWS_SECRET_ACCESS_KEY: '${{ secrets.AWS_SECRET_KEY }}'
